# rplsh

./: .gitignore  CMakeLists.txt  README.md  ff1.cpp  ff2.cpp  install.sh  mergesort_ff.cpp  mergesort_ff1.cpp  pippo1.cpp
aux/: Makefile  a.out  aux.hpp  ff  sequential.hpp  test  types.hpp  wrappers.hpp
business/advanced_map/: Makefile  _ff23.cpp  a.out  business.hpp  ff_code  ff_code.cpp  ff_debug  rpl_commands  sequential  sequential.cpp  sequential_debug
business/diffdir/: Makefile  sequential
business/dotproduct/: CMakeLists.txt  Makefile  business.hpp  business_v2.hpp  ff_code  ff_code.cpp  sequential  sequential_v2  sequential_v2.cpp
examples/: a.out  advanced.rpl  complete.rpl  example.cpp  example_chapter3  example_chapter3.rpl  example_chapter3_seq.cpp  example_chapter3_titanic.rpl  example_code.hpp  example_code_ff.cpp  example_code_titanic.hpp  example_ff.cpp  example_titanic.cpp  forse esempio  import_and_gen.rpl  prova.rpl  simple.rpl  test
rpl-shell/: CMakeLists.txt  rplsh.cpp
rpl-shell/rpl/: CMakeLists.txt  history.cpp  interpreter.cpp  interpreter.hpp  names_completion.hpp  parameters.hpp  tab_completion.cpp  tab_completion.hpp
rpl-shell/rpl/cpp_parser/: cpp_parser.cpp  cpp_parser.hpp
rpl-shell/rpl/dispatchers/: ann_dispatcher.hpp  dispatcher.hpp  eval_dispatcher.hpp  get_dispatcher.hpp  opt_dispatcher.hpp  rr_dispatcher.hpp  set_dispatcher.hpp
rpl-shell/rpl/environment/: environment.hpp  rpl_environment.cpp  rpl_environment.hpp
rpl-shell/rpl/error_report/: error_report.cpp  error_report.hpp
rpl-shell/rpl/nodes/: node_forwards.hpp  node_interface.hpp  skeletons.cpp  skeletons.hpp  tree_matcher.hpp  verbs.cpp  verbs.hpp
rpl-shell/rpl/parser/: lexer.cpp  parser.cpp  parser.hpp  token.cpp  token.hpp
rpl-shell/rpl/rewriting/: rewriter.hpp  rewrules.cpp  rewrules.hpp
rpl-shell/rpl/utils/: mytuple.hpp  printable.hpp  rank.hpp  utils.hpp
rpl-shell/rpl/visitors/: visitor_interface.hpp  visitors.cpp  visitors.hpp
rpl-shell/rpl/visitors/annotators/: annotators.cpp  annotators.hpp
rpl-shell/rpl/visitors/evaluators/: evaluators.cpp  evaluators.hpp
rpl-shell/rpl/visitors/generators/: compseq_setter.cpp  compseq_setter.hpp  ffcode.cpp  ffcode.hpp  ffmapper.cpp  ffmapper.hpp
rpl-shell/rpl/visitors/optimizers/: normalform.cpp  normalform.hpp  optimizers.cpp  optimizers.hpp
test/: Makefile  comp_seq.cpp  complex_seq.cpp  debug_test_ff  definition.hpp  farm_reduce_comp_seq.cpp  farm_reduce_seq.cpp  parameters.hpp  reduce_of_comp_seq.cpp  res_seq.txt  seq.cpp  simple_reduce.hpp  test  test.cpp  test_dc_pipe.cpp  test_dc_pipe_dbg  test_dc_pipe_opt  test_reduce.cpp  utils.hpp  valgrind_out_dbg  valgrind_out_opt  wrong_seq.cpp
test/comp/: Makefile  comp_ff.cpp  comp_of_farm_ff  comp_of_farm_ff.cpp  (+30 more)
(+340 files in other folders)
